statum-macros/tests/ui/invalid_transition_self_qualified_machine.stderr
error: Invalid transition return type for `Machine<Draft>::finish`: expected the impl target machine path directly, or the same path wrapped in a canonical `::core::option::Option`, `::core::result::Result`, or `::statum::Branch`.

       Expected:
         fn finish(self) -> Machine<NextState>

       Actual:
         self :: Machine < Accepted >

       Help:
         return `Machine<NextState>` directly using the same machine path as the impl target, or wrap that same machine path in `::core::option::Option<...>`, `::core::result::Result<..., E>`, or `::statum::Branch<..., ...>` and build the next state with `self.transition()` or `self.transition_with(...)`.
         Bare, aliased, or differently-qualified wrapper and machine paths are rejected because transition introspection only accepts exact syntactic return shapes.
  --> tests/ui/invalid_transition_self_qualified_machine.rs:28:28
   |
28 |         fn finish(self) -> self::Machine<Accepted> {
   |                            ^^^^
